[gd_scene load_steps=8 format=2]

[ext_resource path="res://player_overhead.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://White_full.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 15.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 25 )

[sub_resource type="TileSet" id=3]

[node name="world" type="Node2D"]
modulate = Color( 0.247059, 0.415686, 0.407843, 1 )
position = Vector2( 237, 150 )

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 22, 23.5 )
shape = SubResource( 1 )

[node name="PlayerOverhead" type="Sprite" parent="Player"]
position = Vector2( 21, 17 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( 22, 23 )
shape = SubResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]

[node name="End" type="TextEdit" parent="."]
visible = false
margin_left = 248.0
margin_top = 109.0
margin_right = 490.0
margin_bottom = 292.0
text = "You Lose! Try again by clicking F"
readonly = true

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 400, 312 )
texture = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 274, 51 )

[node name="Enemy3" parent="." instance=ExtResource( 3 )]
position = Vector2( 145, 226 )

[node name="Enemy4" parent="." instance=ExtResource( 3 )]
position = Vector2( -55, 124 )

[node name="Enemy11" parent="." instance=ExtResource( 3 )]
position = Vector2( 63, -144 )

[node name="Enemy13" parent="." instance=ExtResource( 3 )]
position = Vector2( -279, 26 )

[node name="Enemy14" parent="." instance=ExtResource( 3 )]
position = Vector2( -268, -209 )

[node name="Enemy15" parent="." instance=ExtResource( 3 )]
position = Vector2( -270, -120 )

[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_Area2D_body_entered"]
